[+]UPDATE backend pom.xml and application.properties

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -4,3 +4,11 @@ spring.datasource.driverClassName=org.mariadb.jdbc.Driver
 spring.datasource.url=jdbc:mariadb://localhost:3306/daengnyang?autoReconnect=true&useUnicode=true&characterEncoding=utf8
 spring.datasource.username=root
 spring.datasource.password=ssafy
+
+#redis
+spring.redis.host=127.0.0.1
+spring.redis.port=6379
+
+spring.cache.redis.defaultExpireTime=0
+spring.cache.redis.expireTime.billDetailData=3600
+spring.cache.redis.expireTime.billSummaryInfos=3600
