--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -5,10 +5,22 @@ spring.datasource.url=jdbc:mariadb://localhost:3306/daengnyang?autoReconnect=tru
 spring.datasource.username=root
 spring.datasource.password=ssafy
 
-#redis
-spring.redis.host=127.0.0.1
-spring.redis.port=6379
+#swagger
+spring.resources.add-mappings=true
+#boot auto reload
+spring.devtools.livereload.enabled=true
 
-spring.cache.redis.defaultExpireTime=0
-spring.cache.redis.expireTime.billDetailData=3600
-spring.cache.redis.expireTime.billSummaryInfos=3600
+# drop n create table
+spring.jpa.hibernate.ddl-auto=update
+
+#jwt.secret=tldms
+
+#redis
+spring.redis.lettuce.pool.max-active=10
+spring.redis.lettuce.pool.max-idle=10
+spring.redis.lettuce.pool.min-idle=2
+spring.redis.port=6379
+spring.redis.host=127.0.0.1
+#spring.cache.redis.defaultExpireTime=0
+#spring.cache.redis.expireTime.billDetailData=3600
+#spring.cache.redis.expireTime.billSummaryInfos=3600
