--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,19 +1,21 @@
 server.port=8080
 
 spring.datasource.driverClassName=org.mariadb.jdbc.Driver
-spring.datasource.url=jdbc:mariadb://localhost:3306/daengnyang?autoReconnect=true&useUnicode=true&characterEncoding=utf8
+#spring.datasource.url=jdbc:mariadb://localhost:3306/daengnyang?autoReconnect=true&useUnicode=true&characterEncoding=utf8
+spring.datasource.url=jdbc:mariadb://k3b306.p.ssafy.io/daengnyang?autoReconnect=true&useUnicode=true&characterEncoding=utf8
 spring.datasource.username=root
 spring.datasource.password=ssafy
 
 #swagger
 spring.resources.add-mappings=true
+
 #boot auto reload
 spring.devtools.livereload.enabled=true
 
 # drop n create table
 spring.jpa.hibernate.ddl-auto=update
 
-#jwt.secret=tldms
+jwt.secret=jwtsecretkey
 
 #redis
 spring.redis.lettuce.pool.max-active=10
