--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -5,10 +5,25 @@ spring.datasource.url=jdbc:mariadb://localhost:3306/daengnyang?autoReconnect=tru
 spring.datasource.username=root
 spring.datasource.password=ssafy
 
+#`hibernate_sequence' doesn't exist
+spring.jpa.hibernate.use-new-id-generator-mappings=false
+
+spring.resources.add-mappings=true
+spring.devtools.livereload.enabled=true
+
+# drop n create table, good for testing, comment this in production
+spring.jpa.hibernate.ddl-auto=update
+
+jwt.secret=tldms
+
 #redis
-spring.redis.host=127.0.0.1
+spring.redis.lettuce.pool.max-active=10
+spring.redis.lettuce.pool.max-idle=10
+spring.redis.lettuce.pool.min-idle=2
 spring.redis.port=6379
+spring.redis.host=127.0.0.1
 
 spring.cache.redis.defaultExpireTime=0
 spring.cache.redis.expireTime.billDetailData=3600
 spring.cache.redis.expireTime.billSummaryInfos=3600
+
