[+]Add Animal Data Parsing

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -30,3 +30,4 @@ spring.redis.host=127.0.0.1
 #spring.cache.redis.expireTime.billDetailData=3600
 #spring.cache.redis.expireTime.billSummaryInfos=3600
 
+SERVICE_KEY=WqbaHzV11YAQJ3NIV3FjU9jO0QfwfGHBn2Dfgp6amhX9WVXx%2BEzjJcnZCNN0JEGvcqe6tVhLLCFoQBgy7xqajA%3D%3D
