[+]Add spring security & jwt & redis

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -17,8 +17,8 @@ spring.devtools.livereload.enabled=true
 # drop n create table
 spring.jpa.hibernate.ddl-auto=update
 
+# token salt
 jwt.secret=jwtsecretkey
-
 
 #redis
 spring.redis.lettuce.pool.max-active=10
@@ -30,5 +30,17 @@ spring.redis.host=127.0.0.1
 #spring.cache.redis.defaultExpireTime=0
 #spring.cache.redis.expireTime.billDetailData=3600
 #spring.cache.redis.expireTime.billSummaryInfos=3600
+
+#gmail sender
+spring.mail.default-encoding=UTF-8
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=daengnyang306@gmail.com
+spring.mail.password=ssafy306!!
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+AUTH_SERVICE_EMAIL=daengnyang306@gmail.com
+AUTH_SERVICE_PASSWORD=ssafy306!!
 
 SERVICE_KEY=WqbaHzV11YAQJ3NIV3FjU9jO0QfwfGHBn2Dfgp6amhX9WVXx%2BEzjJcnZCNN0JEGvcqe6tVhLLCFoQBgy7xqajA%3D%3D
