--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -121,6 +121,19 @@
 			<artifactId>springfox-swagger2</artifactId>
 			<version>2.9.2</version>
 		</dependency>
+		
+		<!-- MAIL -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-mail</artifactId>
+		    <version>1.4.3.RELEASE</version>
+		</dependency>
+		<!--  JAVA MAIL -->
+		<dependency>
+    		<groupId>javax.mail</groupId>
+    		<artifactId>javax.mail-api</artifactId>
+    		<version>1.6.0</version>
+		</dependency>
 <!-- 
 		<dependency>
 			<groupId>javax.xml.bind</groupId>
