--- a/abctest/src/main/resources/application.properties
+++ b/abctest/src/main/resources/application.properties
@@ -15,3 +15,9 @@ spring.jpa.hibernate.ddl-auto=update
 #swagger
 spring.resources.add-mappings=true
 
+#redis
+ spring.redis.lettuce.pool.max-active=10
+ spring.redis.lettuce.pool.max-idle=10
+ spring.redis.lettuce.pool.min-idle=2
+ spring.redis.port=6379
+ spring.redis.host=127.0.0.1
