S03P31B306-99 [+]UPDATE jwt_token_Validity

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -19,8 +19,14 @@ spring.jpa.hibernate.ddl-auto=update
 
 jwt.secret=jwtsecretkey
 
-JWT_ACCESS_TOKEN_VALIDITY = 600
-JWT_REFRESH_TOKEN_VALIDITY = 604800
+# JWT_ACCESS_TOKEN_VALIDITY : 10minutes
+# JWT_REFRESH_TOKEN_VALIDITY : 14days
+#JWT_ACCESS_TOKEN_VALIDITY = 600
+#JWT_REFRESH_TOKEN_VALIDITY = 1209600
+
+# JWT_ACCESS_TOKEN_VALIDITY : 1day
+JWT_ACCESS_TOKEN_VALIDITY = 86400
+JWT_REFRESH_TOKEN_VALIDITY = 1209600
 
 
 #redis
