--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "vue-cookies": "^1.7.4",
     "vue-fullpage.js": "^0.1.6",
     "vue-router": "^3.2.0",
+    "vuejs-datepicker": "^1.6.2",
     "vuetify": "^2.2.11",
     "vuex": "^3.4.0"
   },
