--- a/abctest/src/main/resources/application.properties
+++ b/abctest/src/main/resources/application.properties
@@ -21,3 +21,10 @@ spring.resources.add-mappings=true
  spring.redis.lettuce.pool.min-idle=2
  spring.redis.port=6379
  spring.redis.host=127.0.0.1
+ 
+ #jwt.secretKey
+ jwt.secret=daengnyang
+ # 10minutes -> 600 seconds
+ jwt.JWT_ACCESS_TOKEN_VALIDITY=600
+ # 1 hour -> 3600 seconds
+ jwt.JWT_REFRESH_TOKEN_VALIDITY=3600
