--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -20,6 +20,10 @@ spring.jpa.hibernate.ddl-auto=update
 # token salt
 jwt.secret=jwtsecretkey
 
+# token expire time
+JWT_ACCESS_TOKEN_VALIDITY = 600
+JWT_REFRESH_TOKEN_VALIDITY = 604800
+
 #redis
 spring.redis.lettuce.pool.max-active=10
 spring.redis.lettuce.pool.max-idle=10
