--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -132,6 +132,19 @@
 			<artifactId>javaSDK</artifactId>
 			<version>2.2</version>
 		</dependency>
+		
+		<!-- MAIL -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-mail</artifactId>
+		    <version>1.4.3.RELEASE</version>
+		</dependency>
+		<!--  JAVA MAIL -->
+		<dependency>
+    		<groupId>javax.mail</groupId>
+    		<artifactId>javax.mail-api</artifactId>
+    		<version>1.6.0</version>
+		</dependency>
 
 	</dependencies>
 
