--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "vue": "^2.6.11",
     "vue-cookies": "^1.7.4",
     "vue-fullpage.js": "^0.1.6",
+    "vue-plyr": "^7.0.0",
     "vue-resource": "^1.5.1",
     "vue-router": "^3.2.0",
     "vuetify": "^2.2.11",
