--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,7 +11,9 @@
     "bootstrap": "^4.5.3",
     "bootstrap-vue": "^2.18.1",
     "core-js": "^3.6.5",
+    "mdbvue": "^6.7.1",
     "vue": "^2.6.11",
+    "vue-burger-menu": "^2.0.5",
     "vue-cookies": "^1.7.4",
     "vue-fullpage.js": "^0.1.6",
     "vue-plyr": "^7.0.0",
