--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,7 +21,8 @@
     "vue-router": "^3.2.0",
     "vuejs-datepicker": "^1.6.2",
     "vuetify": "^2.2.11",
-    "vuex": "^3.4.0"
+    "vuex": "^3.4.0",
+    "vuex-persistedstate": "^4.0.0-beta.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
