S03P31B306-116 [+]UPDATE upload Video

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -46,3 +46,8 @@ AUTH_SERVICE_EMAIL=daengnyang306@gmail.com
 AUTH_SERVICE_PASSWORD=ssafy306!!
 
 SERVICE_KEY=WqbaHzV11YAQJ3NIV3FjU9jO0QfwfGHBn2Dfgp6amhX9WVXx%2BEzjJcnZCNN0JEGvcqe6tVhLLCFoQBgy7xqajA%3D%3D
+
+spring.servlet.multipart.enabled=true
+#spring.http.multipart.enabled=false
+spring.servlet.multipart.max-file-size=500KB
+spring.servlet.multipart.max-request-size=500KB
