--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -146,6 +146,18 @@
     		<artifactId>javax.mail-api</artifactId>
     		<version>1.6.0</version>
 		</dependency>
+		
+		<!-- VIDEO UPLOAD -->
+		<dependency>
+		   <groupId>commons-fileupload</groupId>
+		   <artifactId>commons-fileupload</artifactId>
+		   <version>1.3</version>
+		</dependency>
+        <dependency>
+		    <groupId>commons-io</groupId>
+		    <artifactId>commons-io</artifactId>
+		    <version>2.6</version>
+		</dependency>
 
 	</dependencies>
 
