--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -19,7 +19,7 @@ spring.resources.add-mappings=true
 jwt.secret=jwtsecretkey
 
 # token expire time
-JWT_ACCESS_TOKEN_VALIDITY = 600
+JWT_ACCESS_TOKEN_VALIDITY = 3600
 JWT_REFRESH_TOKEN_VALIDITY = 604800
 
 
@@ -49,5 +49,5 @@ SERVICE_KEY=WqbaHzV11YAQJ3NIV3FjU9jO0QfwfGHBn2Dfgp6amhX9WVXx%2BEzjJcnZCNN0JEGvcq
 
 spring.servlet.multipart.enabled=true
 #spring.http.multipart.enabled=false
-spring.servlet.multipart.max-file-size=500KB
-spring.servlet.multipart.max-request-size=500KB
+spring.servlet.multipart.max-file-size=100MB
+spring.servlet.multipart.max-request-size=100MB
