--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "vue-burger-menu": "^2.0.5",
     "vue-cookies": "^1.7.4",
     "vue-fullpage.js": "^0.1.6",
+    "vue-infinite-loading": "^2.4.5",
     "vue-plyr": "^7.0.0",
     "vue-resource": "^1.5.1",
     "vue-router": "^3.2.0",
