[+]UPDATE application.properties

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -23,7 +23,7 @@ JWT_ACCESS_TOKEN_VALIDITY = 3600
 JWT_REFRESH_TOKEN_VALIDITY = 604800
 
 # filePath
-filePath = C:/SSAFY/git/s03p31b306/frontend/src/assets/videos/
+filePath = @/assets/videos/
 
 #redis
 spring.redis.lettuce.pool.max-active=10
