--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,10 +1,12 @@
-server.port=8084
-
+server.port=8080
 # ssl
+server.ssl.enabled=true
 server.ssl.key-store=keystore.p12
 server.ssl.key-store-type=PKCS12
 server.ssl.key-store-password=ssafy123
 server.ssl.key-alias=javaboja
+
+security.require-ssl=true
 
 server.http2.enabled=true
 # DataBase
