S03P31B306-115 [+]UPDATE video upload BE

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -23,7 +23,7 @@ JWT_ACCESS_TOKEN_VALIDITY = 3600
 JWT_REFRESH_TOKEN_VALIDITY = 604800
 
 # filePath
-filePath = @/assets/videos/
+filePath = C:/SSAFY/git/s03p31b306/frontend/src/assets/videos/
 
 #redis
 spring.redis.lettuce.pool.max-active=10
@@ -50,5 +50,5 @@ AUTH_SERVICE_PASSWORD=ssafy306!!
 SERVICE_KEY=WqbaHzV11YAQJ3NIV3FjU9jO0QfwfGHBn2Dfgp6amhX9WVXx%2BEzjJcnZCNN0JEGvcqe6tVhLLCFoQBgy7xqajA%3D%3D
 
 spring.servlet.multipart.enabled=true
-spring.servlet.multipart.max-file-size=100MB
-spring.servlet.multipart.max-request-size=100MB
+spring.servlet.multipart.max-file-size=1GB
+spring.servlet.multipart.max-request-size=1GB
