--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,14 +1,10 @@
 server.port=8084
 # ssl
-server.ssl.enabled=true
 server.ssl.key-store=keystore.p12
 server.ssl.key-store-type=PKCS12
 server.ssl.key-store-password=ssafy123
-server.ssl.key-alias=javaboja
-
-security.require-ssl=true
-
 server.http2.enabled=true
+
 # DataBase
 spring.datasource.driverClassName=org.mariadb.jdbc.Driver
 spring.datasource.url=jdbc:mariadb://k3b306.p.ssafy.io/daengnyang?autoReconnect=true&useUnicode=true&characterEncoding=utf8
@@ -28,7 +24,7 @@ spring.resources.add-mappings=true
 jwt.secret=jwtsecretkey
 
 # token expire time
-JWT_ACCESS_TOKEN_VALIDITY = 3600
+JWT_ACCESS_TOKEN_VALIDITY = 
 JWT_REFRESH_TOKEN_VALIDITY = 604800
 
 # filePath
