[+]Add streaming live, viewer

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -25,7 +25,7 @@ spring.resources.add-mappings=true
 jwt.secret=jwtsecretkey
 
 # token expire time
-JWT_ACCESS_TOKEN_VALIDITY = 3600
+JWT_ACCESS_TOKEN_VALIDITY = 600
 JWT_REFRESH_TOKEN_VALIDITY = 604800
 
 # filePath
@@ -56,5 +56,5 @@ AUTH_SERVICE_PASSWORD=ssafy306!!
 SERVICE_KEY=WqbaHzV11YAQJ3NIV3FjU9jO0QfwfGHBn2Dfgp6amhX9WVXx%2BEzjJcnZCNN0JEGvcqe6tVhLLCFoQBgy7xqajA%3D%3D
 
 spring.servlet.multipart.enabled=true
-spring.servlet.multipart.max-file-size=100MB
-spring.servlet.multipart.max-request-size=100MB
+spring.servlet.multipart.max-file-size=1GB
+spring.servlet.multipart.max-request-size=1GB
