--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-server.port=8084
+server.port=8080
 # ssl
 server.ssl.key-store=keystore.p12
 server.ssl.key-store-type=PKCS12
@@ -24,7 +24,7 @@ spring.resources.add-mappings=true
 jwt.secret=jwtsecretkey
 
 # token expire time
-JWT_ACCESS_TOKEN_VALIDITY = 
+JWT_ACCESS_TOKEN_VALIDITY = 600
 JWT_REFRESH_TOKEN_VALIDITY = 604800
 
 # filePath
