--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -4,7 +4,7 @@ server.port=8080
 server.ssl.key-store=keystore.p12
 server.ssl.key-store-type=PKCS12
 server.ssl.key-store-password=ssafy123
-server.http2.enabled=true
+server.http2.enabled=false
 
 # DataBase
 spring.datasource.driverClassName=org.mariadb.jdbc.Driver
