--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,16 +1,20 @@
 #server.port=8084
 server.port=8080
 # ssl
-server.ssl.key-store=keystore.p12
-server.ssl.key-store-type=PKCS12
-server.ssl.key-store-password=ssafy123
-server.http2.enabled=false
+#server.ssl.key-store=keystore.p12
+#server.ssl.key-store-type=PKCS12
+#server.ssl.key-store-password=ssafy123
+#server.http2.enabled=false
 
 # DataBase
-spring.datasource.driverClassName=org.mariadb.jdbc.Driver
-spring.datasource.url=jdbc:mariadb://k3b306.p.ssafy.io/daengnyang?autoReconnect=true&useUnicode=true&characterEncoding=utf8
-spring.datasource.username=root
-spring.datasource.password=ssafy
+#spring.datasource.driverClassName=org.mariadb.jdbc.Driver
+#spring.datasource.url=jdbc:mariadb://k3b306.p.ssafy.io/daengnyang?autoReconnect=true&useUnicode=true&characterEncoding=utf8
+#spring.datasource.username=root
+#spring.datasource.password=ssafy
+spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/daengnyang?autoReconnect=true&useUnicode=true&characterEncoding=utf8
+spring.datasource.username=hyerin
+spring.datasource.password=hyerin
 
 #boot auto reload
 spring.devtools.livereload.enabled=true
