--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -16,11 +16,17 @@ spring.datasource.url=jdbc:mysql://localhost:3306/daengnyang?autoReconnect=true&
 spring.datasource.username=hyerin
 spring.datasource.password=hyerin
 
+# logging
+logging.level.org.hibernate.SQL: debug
+logging.level.org.hibernate.type: trace
+
 #boot auto reload
 spring.devtools.livereload.enabled=true
 
 # drop n create table
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.format_sql: true
+spring.jpa.properties.hibernate.show_sql: true
 
 #swagger
 spring.resources.add-mappings=true
